# mvc

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.17895c8  libraries.h  main.c
controller/: controlAlimento.c  controlCliente.c
dataTypes/: opaqueTypeCliente.h  opaqueTypeClienteIntern.h
menu/: conio.h  menu.c  menu.h
model/: modelAlimento.c  modelCliente.c
view/: viewAlimento.c  viewCliente.c
